--- a/src/styles/Transaction.module.css
+++ b/src/styles/Transaction.module.css
@@ -1,6 +1,7 @@
 .container {
   background-color: white;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  width: 400px;
 }
 
 /* Form */
